# MAPLES-DR

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: index.doctree
.doctrees/api_reference/: dataset.doctree  loader.doctree  quick_api.doctree
.doctrees/examples/: visualisation.doctree
.doctrees/welcome/: messidor.doctree  quickstart.doctree
.github/workflows/: documentation.yml
_sources/: index.rst.txt
_sources/api_reference/: loader.rst.txt
_sources/welcome/: quickstart.rst.txt
api_reference/: dataset.html  loader.html  quick_api.html
docs/: .gitignore  justfile
docs/source/: bibliography.bib  conf.py  index.rst
docs/source/_templates/: layout.html  versions.html
docs/source/api_reference/: dataset.rst  quick_api.rst
docs/source/examples/: visualisation.ipynb
docs/source/welcome/: dataset_description.rst  maples_dr.rst  messidor.rst  python_library.rst  quickstart.rst
en/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
en/.doctrees/: index.doctree
en/.doctrees/api_reference/: config.doctree  dataset.doctree  loader.doctree  preprocessing.doctree  quick_api.doctree
en/.doctrees/examples/: visualisation.doctree
en/.doctrees/welcome/: dataset_description.doctree  messidor.doctree  python_library.doctree  quickstart.doctree
en/_sources/: index.rst.txt
en/_sources/api_reference/: preprocessing.rst.txt
en/_static/: documentation_options.js
en/api_reference/: config.html  dataset.html  loader.html  preprocessing.html  quick_api.html
en/examples/: visualisation.html
en/welcome/: dataset_description.html  messidor.html  python_library.html  quickstart.html
examples/: .gitignore  article_figures.ipynb  cleanup_export_biomarkers.ipynb  display_biomarkers.ipynb  display_biomarkers_jppype.ipynb  lesions_database_cross_study.csv  visualisation.html  visualisation.ipynb
examples/variability_study/: intervariability_preselection.ipynb  intervariability_study.ipynb  variability_study_utils.py
fr/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
fr/.doctrees/: index.doctree
fr/_static/: documentation_options.js
fr/api_reference/: config.html  dataset.html  loader.html  preprocessing.html  quick_api.html
fr/examples/: visualisation.html  visualisation.ipynb
fr/welcome/: dataset_description.html  messidor.html  python_library.html  quickstart.html
src/maples_dr/: __init__.py  config.py  dataset.py  loader.py  preprocessing.py  quick_api.py  utilities.py
tests/: test_maples_dr_cache.py  test_maples_dr_config.py  test_maples_dr_dataset.py  test_maples_dr_download.py  test_maples_dr_fundus.py  test_maples_dr_quickapi.py
welcome/: messidor.html  quickstart.html
(+42 files in other folders)
