[project]

name = "maples-dr"
version = '0.1.0'
authors = [
    {name= 'Gabriel Lepetit-Aimon', email= 'gabriel.lepetit-aimon@polymtl.ca'},
]
description = """Utilities python library for the public dataset: MAPLES-DR."""
readme = 'README.md'

requires-python = '>=3.10'
dependencies = [
    'numpy',
    'PIL',
    'pandas',
    'pyyaml',
    'rich',
]

[project.optional-dependencies]
examples = [
    'jppype', 
    'plotly',
    'rich',
    'scikit-image', 
    'scikit-learn', 
    'scipy',
    'tqdm',
]
dev = [
    'sphinx',
    'sphinx-rtd-theme',
    'nbsphinx',
]

[project.urls]
Homepage = 'https://github.com/LIV4D/MAPlES-DR'
Source = 'https://github.com/LIV4D/MAPlES-DR'


[build-system]
requires = ["wheel", "setuptools", "numpy"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
# Enable flake8-bugbear (`B`) rules.
select = ["E", "F", "B", "I"]
line-length = 120

# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]
target-version = "py310"

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.black]
line-length = 120
