[project]

name = "maples-dr"
version = '0.1.0rc4'
authors = [
    {name= 'Gabriel Lepetit-Aimon', email= 'gabriel.lepetit-aimon@polymtl.ca'},
]
description = """Utilities python library for the public dataset of retinal structures: MAPLES-DR."""
readme = 'README.md'

requires-python = '>=3.10'
dependencies = [
    'numpy',
    'Pillow',
    'pandas',
    'xlrd',
    'pyyaml',
    'rich',
]

[project.optional-dependencies]
examples = [
    'plotly',
    'rich',
    'scikit-learn', 
    'scikit-image',
    'scipy',
    'tqdm',
    'jppype',
]
dev = [
    'sphinx',
    'sphinx-rtd-theme',
    'sphinx-copybutton',
    'sphinxcontrib-bibtex',
    'nbsphinx',
    'sphinx-intl',
    'ipython',
]
test = [
    'pytest',
]

[project.urls]
Homepage = 'https://liv4d.github.io/MAPLES-DR/en/'
Documentation = 'https://liv4d.github.io/MAPLES-DR/en/welcome/python_library.html'
Source = 'https://github.com/LIV4D/MAPlES-DR'


[build-system]
requires = ["wheel", "setuptools", "numpy"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
# Enable flake8-bugbear (`B`) rules.
select = ["E", "F", "B", "I"]
line-length = 120

# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]
target-version = "py310"

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
testpaths = [
    "tests",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"